workspace-sf/force-app/main/default/objects/public_arquivoecmintegra__x/public_arquivoecmintegra__x.object-meta.xml
<CustomObject>
    <description>public$arquivoecmintegra</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$arquivoecmintegra</externalName>
    <label>public$arquivoecmintegra</label>
    <pluralLabel>public$arquivoecmintegra</pluralLabel>
</CustomObject>