workspace-sf/force-app/main/default/objects/public_arquivoecmintegra__x/fields/datainclusao__c.field-meta.xml
<CustomField>
    <fullName>datainclusao__c</fullName>
    <description>datainclusao</description>
    <externalDeveloperName>datainclusao</externalDeveloperName>
    <label>datainclusao</label>
    <type>Date</type>
</CustomField>