workspace-sf/force-app/main/default/objects/public_arquivoecmintegra__x/fields/idcontext__c.field-meta.xml
<CustomField>
    <fullName>idcontext__c</fullName>
    <description>idcontext</description>
    <externalDeveloperName>idcontext</externalDeveloperName>
    <label>idcontext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>