workspace-sf/force-app/main/default/objects/public_arquivoecmintegra__x/fields/idecm__c.field-meta.xml
<CustomField>
    <fullName>idecm__c</fullName>
    <description>idecm</description>
    <externalDeveloperName>idecm</externalDeveloperName>
    <label>idecm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>