workspace-sf/force-app/main/default/objects/public_arquivoecmintegra__x/fields/idsf__c.field-meta.xml
<CustomField>
    <fullName>idsf__c</fullName>
    <description>idsf</description>
    <externalDeveloperName>idsf</externalDeveloperName>
    <label>idsf</label>
    <length>18</length>
    <type>Text</type>
</CustomField>