workspace-sf/force-app/main/default/objects/public_arquivoecmintegra__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>status</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>